--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base</title>
+    <title>{% block title %}Base{% endblock %}</title>
 </head>
 <body>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<a href="{{ url_for('index')}}">rrr</a>
+<a href="{{ url_for('index')}}"><button>Back</button></a>
 <div class="content">
 {% block content %}
 
