--- a/templates/method.html
+++ b/templates/method.html
@@ -11,6 +11,10 @@
   {{ text|safe }}
 
   <br>
+  <label for="chroots">Check roots</label>
+  <input type="checkbox" name="checkRoots" id='chroots'>
+  <br>
+  <br>
   <button type="submit">Calculate</button>
   <button type="reset">Clear</button>
   <br>
