--- a/templates/diff.html
+++ b/templates/diff.html
@@ -11,19 +11,19 @@
         <option value="1">Runge-Kutta(2)</option>
         <option value="2">Runge-Kutta(3)</option>
         <option value="3">Runge-Kutta(4)</option>
-
     </select>
+
     <select name="sel-func">
         <option value="0">-yx</option>
         <option value="1">y+x</option>
         <option value="2">(3x - 12x²)y</option>
     </select>
     <br>
-    A:<input class='nums' name='a' required step="0.01" type='number'>
-    B:<input class='nums' name='b' required step="0.01" type='number'>
+    A:<input class='nums' value="{{a}}" name='a' required step="0.01" type='number'>
+    B:<input class='nums' value="{{b}}"  name='b' required step="0.01" type='number'>
     <br>
-    y0:<input class='nums' name='y' required step="0.01" type='number'>
-    N:<input class='nums' name='n' required type='number'>
+    y0:<input class='nums' value="{{y0}}"  name='y' required step="0.01" type='number'>
+    N:<input class='nums' value="{{n}}"  name='n' required type='number'>
     <br>
     <button type="submit">Calculate</button>
     <br>
@@ -31,7 +31,6 @@
     {{ y }}
     <br>
     <br>
-
 </form>
 
 
@@ -41,19 +40,11 @@
     <img src='data:image/png; base64,{{image }}' width="700px">
 
 </div>
-
-
 {% endif %}
-
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script type="text/javascript">
-    var graphs = {
-    {
-        graphJSON | safe
-    }
-    }
-
+    var graphs = {{ graphJSON | safe }};
     Plotly.plot('chart', graphs, {});
 </script>
 {% endblock %}
