--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<a href="{{ url_for('methods_menu')}}">
-    <button>Sprint01</button>
-</a>
+<a href="{{ url_for('methods_menu')}}"><button>Sprint01</button></a>
+
 <a href="{{ url_for('methods_menu_s2')}}">
     <button>Sprint02</button>
 </a>
