--- a/templates/diff.html
+++ b/templates/diff.html
@@ -17,6 +17,7 @@
         <option value="0">-yx</option>
         <option value="1">y+x</option>
         <option value="2">(3x - 12x²)y</option>
+        <option value="3">x²-2y</option>
     </select>
     <br>
     A:<input class='nums' value="{{a}}" name='a' required step="0.01" type='number'>
