--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,9 @@
 <a href="{{ url_for('methods_menu_s2')}}">
     <button>Sprint02</button>
 </a>
+
+<a href="{{ url_for('dm')}}">
+    <button>Sprint02</button>
+</a>
 </body>
 </html>
