--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,7 @@
 <body>
 <a href="{{ url_for('methods_menu')}}"><button>Sprint01</button></a>
 
-<a href="{{ url_for('methods_menu_s2')}}">
-    <button>Sprint02</button>
-</a>
-
-<a href="{{ url_for('dm')}}">
-    <button>Sprint02</button>
-</a>
+<a href="{{ url_for('methods_menu_s2')}}"><button>Sprint02</button></a>
+<a href="{{ url_for('dm')}}"><button>DM</button></a>
 </body>
 </html>
