dm2 (todo orgraph and css tables)

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,6 @@
 
 <a href="{{ url_for('methods_menu_s2')}}"><button>Sprint02</button></a>
 <a href="{{ url_for('dm')}}"><button>DM</button></a>
+<a href="{{ url_for('dm2')}}"><button>DM2</button></a>
 </body>
 </html>
