--- a/static/style.css
+++ b/static/style.css
@@ -33,3 +33,74 @@ input.dop{
 .dm{
     font-size: 20px;
 }
+
+table.data{
+    margin: 0 auto;
+}
+table.data td{
+    text-align: left;
+    padding-right: 20px;
+}
+
+
+strong, b { font-weight: bold; }
+
+table { border-collapse: collapse; border-spacing: 0; width:50%; margin: 25px}
+img {  margin: 0 auto }
+
+textarea{
+    font-size: 14px;
+}
+
+/** page structure **/
+
+.keywords {
+  margin: 0 auto;
+  font-size: 1.2em;
+  margin-bottom: 15px;
+}
+
+
+.keywords thead {
+  background: #c9dff0;
+}
+.keywords thead tr th {
+  font-weight: bold;
+  padding: 12px 30px;
+  padding-left: 30px;
+}
+.keywords thead tr th span {
+
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+}
+
+.keywords tbody tr {
+  color: #555;
+}
+.keywords tbody tr td {
+  text-align: center;
+  padding: 15px 10px;
+    border-top: 1.5px gray solid;
+}
+
+.keywords tbody{
+    border-bottom: 1.5px gray solid;
+
+}
+
+.keywords tbody tr td.lalign {
+    text-align: left;
+    background: #c9dff0;
+    border-right: 1.5px gray solid;
+    font-weight: bold;
+}
+
+
+.keywords tfoot tr td {
+    text-align: center;
+    font-weight: bold;
+    padding: 12px 30px;
+    background: #c9dff0;
+    border-bottom: 1.5px gray solid;
+}
