--- a/static/style.css
+++ b/static/style.css
@@ -46,7 +46,12 @@ table.data td{
 strong, b { font-weight: bold; }
 
 table { border-collapse: collapse; border-spacing: 0; width:50%; margin: 25px}
-img {  margin: 0 auto }
+img {
+    margin: 30px auto;
+    max-width: 500px;
+    max-height: 500px;
+
+}
 
 textarea{
     font-size: 14px;
@@ -66,8 +71,8 @@ textarea{
 }
 .keywords thead tr th {
   font-weight: bold;
-  padding: 12px 30px;
-  padding-left: 30px;
+  padding: 12px 25px;
+
 }
 .keywords thead tr th span {
 
@@ -80,7 +85,7 @@ textarea{
 }
 .keywords tbody tr td {
   text-align: center;
-  padding: 15px 10px;
+  padding: 10px;
     border-top: 1.5px gray solid;
 }
 
