--- a/templates/dm2.html
+++ b/templates/dm2.html
@@ -17,7 +17,7 @@
 <b>Degree:</b>
 <p>
 {% for x in degree %}
-    {{x}}: {{degree[x]}};
+    p({{x}}) = {{degree[x]}};
 {% endfor%}
 </p>
 <table class="data">
